src/objects/netsuite_conn__Opportunity_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Account_Field_Ids__c</fullName>
        <description>This will store the list of account fields on Opportunity which should sync with Opportunity</description>
        <label>Account Field Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Account_Id__c</fullName>
        <description>This field contains the name of the field, which will represent Opportunity&apos;s account. That field should be a lookup field. This custom setting allows user to tell to connector, where to check for the Opportunity&apos;s account, which will corresponds to NetSuite customer. Default value will be &apos;AccountId&apos;</description>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Change_Opportunity_Stage_to__c</fullName>
        <label>Change Opportunity Stage to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Channel_Account_Sync_Role__c</fullName>
        <inlineHelpText>Specify the opportunity partner role, for which Channel Account sync should work. 
Example: Distributor,Contractor,VAR/Reseller etc..</inlineHelpText>
        <label>Channel Account Sync Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Line_Item_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Line Item Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Do_Not_Allow_Discount_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Allow Discount Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Enable_Team_Selling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Team Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_If_Stage_is_any_of__c</fullName>
        <label>Sync If Stage(is/any of)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_Without_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Without Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Turn_on_Channel_Account_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn on Channel Account Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Sync Settings</label>
</CustomObject>